# cppy3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_tests.sh
.github/workflows/: cmake-multi-platform.yml
cmake/: FindNumPy.cmake
cppy3/: CMakeLists.txt  cppy3.cpp  cppy3.hpp  cppy3_numpy.cpp  cppy3_numpy.hpp  libdefs.hpp  utils.cpp  utils.hpp
examples/: console.cpp
tests/: CMakeLists.txt  tests.cpp
